[package]
name = "fetch-with-render"
version = "0.1.12"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wry = "0.37"
tao = "0.26"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
